--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Bobby</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Test</title>
+	</head>
+	<body>
+		<h1 style="font-family: Arial">Test Website</h1>
+		<p>do not disturb</p>
+	</body>
+</html>
