--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Test</title>
 	</head>
 	<body>
+		<script type="text/javascript" src="GoogleAnalytics.js"></script>
 		<h1 style="font-family: Arial">Test Website</h1>
 		<p>do not disturb</p>
 	</body>
