--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
 		<title>Test</title>
 	</head>
 	<body>
-		<script type="text/javascript" src="GoogleAnalytics.js"></script>
+	<!--Google Analytics-->
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-84148369-1', 'auto');
+			ga('send', 'pageview');
+		</script>
+	<!--Rest Body-->
 		<h1 style="font-family: Arial">Test Website</h1>
 		<p>do not disturb</p>
 	</body>
