--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Test</title>
+		<a href="style.css" type="text/css" rel="stylesheet"></a>
 	</head>
 	<body>
 	<!--Google Analytics-->
