--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Test</title>
-		<a href="style.css" type="text/css" rel="stylesheet"></a>
+		<a href="style/style.css" type="text/css" rel="stylesheet"></a>
 	</head>
 	<body>
 	<!--Google Analytics-->
@@ -16,9 +16,12 @@
 			ga('send', 'pageview');
 		</script>
 		<div>
-	<!--Rest Body-->
+	<!--Body-->
 		<h1 style="font-family: Arial">Test Website</h1>
 		<p>do not disturb</p>
+	<!--Scripts-->
+		<script type="text/javascript" src="proccesing/proccesing.js"></script>
+		<script type="text/javascript" src="JS/IndexRunTime"></script>
 		</div>
 	</body>
 </html>
