--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 			ga('create', 'UA-84148369-1', 'auto');
 			ga('send', 'pageview');
 		</script>
-		<div>
+		<div></div>
 	<!--Body-->
 		<h1 style="font-family: Arial">Test Website</h1>
 		<p>do not disturb</p>
 	<!--Scripts-->
 		<script type="text/javascript" src="proccesing/proccesing.js"></script>
 		<script type="text/javascript" src="JS/IndexRunTime"></script>
+		<script type="application/processing" src="style/index.pde"></script>
 		</div>
 	</body>
 </html>
