--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<!--Scripts-->
 		<script type="text/javascript" src="proccesing/proccesing.js"></script>
 		<script type="text/javascript" src="JS/IndexRunTime"></script>
-		<script type="application/processing" src="style/index.pde"></script>
+<canvas width="400" height="400" data-processing-sources="style/index.pde"></canvas>
 		</div>
 	</body>
 </html>
