--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!--Scripts-->
 		<script type="text/javascript" src="proccesing/proccesing.js"></script>
 		<script type="text/javascript" src="JS/IndexRunTime"></script>
-		<canvas width="1350 height="400" data-processing-sources="style/index.pde"></canvas>
+		<canvas width="1em" height="1em" data-processing-sources="style/index.pde"></canvas>
 		</div>
 	</body>
 </html>
