--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</script>
 	<!--Scripts-->
 		<script type="text/javascript" src="proccesing/proccesing.js"></script>
-		<script type="text/javascript" src="JS/IndexRunTime"></script>
+		<script type="text/javascript" src="JS/IndexRunTime.js"></script>
 		<canvas width="1em" height="1em" data-processing-sources="style/index.pde"></canvas>
 		</div>
 	</body>
