--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 	<!--Scripts-->
 		<script type="text/javascript" src="proccesing/proccesing.js"></script>
 		<script type="text/javascript" src="JS/IndexRunTime.js"></script>
-		<canvas width="1em" height="1em" data-processing-sources="style/index.pde"></canvas>
+	<!--Body-->
+		<h1>NerdnHub</h1>
+		<button type="button" id="c-tab-index">Create<button>
 		</div>
 	</body>
 </html>
