Signing Up images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		<script type="text/javascript" src="JS/IndexRunTime.js"></script>
 	<!--Body-->
 		<h1>NerdnHub</h1>
-		<button type="button" id="c-tab-index">Create<button>
-		</div>
+		<button type="button" name="c-tab-index">Create</button>
+		<button type="button" name="pre-tab-index">Premade Chips</button>
+		<button type="button" name="sign-in-up">Signin/Signup!</button>
 	</body>
 </html>
