--- a/signing/signin.html
+++ b/signing/signin.html
@@ -13,7 +13,13 @@
           <li>
           <input type="submit" value="Login"></li>
         </ul>
-</form>
-</section>
+      </form>
+    </section>
+    <style>
+    html {
+      background: url("backgrounds/Main.png");
+      font-size: 10pt;
+    }
+    </style>
   </body>
 </html>
