--- a/signing/signin.html
+++ b/signing/signin.html
@@ -17,7 +17,7 @@
     </section>
     <style>
     html {
-      background: url("backgrounds/Main.png");
+      background-image: url("backgrounds/Main.png");
       font-size: 10pt;
     }
     </style>
