--- a/signing/signin.html
+++ b/signing/signin.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    	<a href="signing/sign.css" type="text/css" rel="stylesheet"></a>
+    	<a href="sign.css" type="text/css" rel="stylesheet"></a>
   </head>
   <body>
     <section class="loginform cf">
