--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<script type="text/javascript" src="proccesing/proccesing.js"></script>
 		<script type="text/javascript" src="JS/IndexRunTime.js"></script>
 	<!--Body-->
-		<h1>NerdnHub</h1>
+		<h1 class="Top-Header">NerdnHub</h1>
 		<button type="button" name="c-tab-index">Create</button>
 		<button type="button" name="pre-tab-index">Premade Chips</button>
 		<button type="button" name="sign-in-up">Signin/Signup!</button>
