--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Test</title>
-		<a href="style/style.css" type="text/css" rel="stylesheet"></a>
+		<link href="style/style.css" type="text/css" rel="stylesheet"></a>
 	</head>
 	<body>
 	<!--Google Analytics-->
