--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 		<p>Are chips made by <strong>you</strong></p>
 		<button type="button" name="c-tab-index">Create</button>
 		<button type="button" name="pre-tab-index">Premade Chips</button>
-		<button type="button" name="sign-in-up">Signin/Signup!</button>
+		<button type="button" name="sign-in-up">Signin/Signup</button>
 	</body>
 </html>
