--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<script type="text/javascript" src="JS/IndexRunTime.js"></script>
 	<!--Body-->
 		<h1 class="Top-Header">NerdnHub</h1>
-		<p>Are chips made by <strong>you</strong></p>
+		<p>Are chips made by <strong>YOU!</strong></p>
 		<button type="button" name="c-tab-index">Create</button>
 		<button type="button" name="pre-tab-index">Premade Chips</button>
 		<button type="button" name="sign-in-up">Signin/Signup</button>
