--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 		<script type="text/javascript" src="proccesing/proccesing.js"></script>
 		<script type="text/javascript" src="JS/IndexRunTime.js"></script>
 	<!--Body-->
-		<h1 class="Top-Header">NerdnHub</h1>
-		<p>Are chips made by <strong>YOU!</strong></p>
+		<p>Contact us at "rayprati.code@gmail.com" or "derpasourusrex.code@gmail.com"!</p>
+                <h1 class="Top-Header">NerdnHub</h1>
+		<p>Chips made by <strong>YOU!</strong></p>
 		<button type="button" name="c-tab-index">Create</button>
 		<button type="button" name="pre-tab-index">Premade Chips</button>
 		<button type="button" name="sign-in-up">Signin/Signup</button>
