--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 		<script type="text/javascript" src="proccesing/proccesing.js"></script>
 		<script type="text/javascript" src="JS/IndexRunTime.js"></script>
 	<!--Body-->
-		<p>Contact us at "<strong class="email">rayprati.code@gmail.com</strong>" or "<strong class="email">derpasourusrex.code@gmail.com</strong>"!</p>
                 <h1 class="Top-Header">NerdnHub</h1>
-		<p>Chips made by <strong>YOU!</strong></p>
+		<p><strong>Our</strong> chips made by <strong>YOU!</strong></p>
 		<button type="button" name="c-tab-index">Create</button>
 		<button type="button" name="pre-tab-index">Premade Chips</button>
 		<button type="button" name="sign-in-up">Signin/Signup</button>
