--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<body>
 	<!--Google Analytics-->
 		<script>
-  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  		ga('create', 'UA-85693221-1', 'auto');
-  		ga('send', 'pageview');
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  			ga('create', 'UA-85693221-1', 'auto');
+  			ga('send', 'pageview');
 		</script>
 	<!--Scripts-->
 		<script type="text/javascript" src="proccesing/proccesing.js"></script>
@@ -20,8 +20,15 @@
 	<!--Body-->
                 <h1 class="Top-Header">NerdnHub</h1>
 		<p><strong>Our</strong> chips made by <strong>YOU!</strong></p>
-		<button type="button" name="c-tab-index">Create</button>
-		<button type="button" name="pre-tab-index">Premade Chips</button>
-		<button type="button" name="sign-in-up">Signin/Signup</button>
+	<!--Buttons-->
+		<button class="chipTabsIndex" type="button" name="cTabIndex">
+			<p>Create</p>
+		</button>
+		<button class="chipTabsIndex" type="button" name="preTabIndex">
+			<p>Premade Chips</p>
+		</button>
+		<button type="button" name="signInUp">
+			<p>SignIn/SignUp</p>
+		</button>
 	</body>
 </html>
