--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<button class="chipTabsIndex" type="button" name="preTabIndex">
 			<p>Premade Chips</p>
 		</button>
-		<button type="button" name="signInUp">
+		<button class="signInUp" type="button" name="signInUp">
 			<p>SignIn/SignUp</p>
 		</button>
 	</body>
