--- a/index.html
+++ b/index.html
@@ -19,16 +19,11 @@
 		<script type="text/javascript" src="JS/IndexRunTime.js"></script>
 	<!--Body-->
                 <h1 class="Top-Header">NerdnHub</h1>
-		<p><strong>Our</strong> chips made by <strong>YOU!</strong></p>
+		<p><strong>Our</strong> computer chips made by <strong>YOU!</strong></p>
 	<!--Buttons-->
-		<button class="chipTabsIndex" type="button" name="cTabIndex">
-			<p>Create</p>
-		</button>
-		<button class="chipTabsIndex" type="button" name="preTabIndex">
-			<p>Premade Chips</p>
-		</button>
-		<button class="signInUp" type="button" name="signInUp">
-			<p>SignIn/SignUp</p>
-		</button>
+		<button class="chipTabsIndex" type="button" name="cTabIndex">Create your own computer chip</button>
+		<button class="chipTabsIndex" type="button" name="preTabIndex">Premade computer chips</button>
+		<button class="signInUp" type="button" name="signInUp">SignIn/SignUp</button>
+		<button><button>Bleh</button></button>
 	</body>
 </html>
