--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		<script type="text/javascript" src="proccesing/proccesing.js"></script>
 		<script type="text/javascript" src="JS/IndexRunTime.js"></script>
 	<!--Body-->
+                <div>
                 <h1 class="Top-Header">NerdnHub</h1>
+                </div>
 		<p><strong>Our</strong> computer chips made by <strong>YOU!</strong></p>
 	<!--Buttons-->
 		<button class="chipTabsIndex" type="button" name="cTabIndex">Create your own computer chip</button>
