--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<script type="text/javascript" src="proccesing/proccesing.js"></script>
 		<script type="text/javascript" src="JS/IndexRunTime.js"></script>
 	<!--Body-->
-                <div></div>
+                <div class="boxed"></div>
                 <h1 class="Top-Header">NerdnHub</h1>
                 
 		<p><strong>Our</strong> computer chips made by <strong>YOU!</strong></p>
