--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!--Body-->
                 <div class="boxed"></div>
                 <h1 class="Top-Header">NerdnHub</h1>
-                
+                <div class="boxed"></div>
 		<p><strong>Our</strong> computer chips made by <strong>YOU!</strong></p>
 	<!--Buttons-->
 		<button class="chipTabsIndex" type="button" name="cTabIndex">Create your own computer chip</button>
