--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 		<button class="chipTabsIndex" type="button" name="cTabIndex">Create your own computer chip</button>
 		<button class="chipTabsIndex" type="button" name="preTabIndex">Premade computer chips</button>
 		<button class="signInUp" type="button" name="signInUp">SignIn/SignUp</button>
-                <p><strong>Our</strong> computer chips made by <strong>YOU!</strong></p>
+                <p><strong class="middle">Our</strong> computer chips made by <strong class="middle">YOU!</strong></p>
 	</body>
 </html>
