--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<button class="chipTabsIndex" type="button" name="cTabIndex">Create your own computer chip</button>
 		<button class="chipTabsIndex" type="button" name="preTabIndex">Premade computer chips</button>
 		<button class="signInUp" type="button" name="signInUp">SignIn/SignUp</button>
+                <div class="boxed"></div>
                 <p><strong class="middle">Our</strong> computer chips made by <strong class="middle">YOU!</strong></p>
 	</body>
 </html>
